--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
+    "vant": "^2.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vue-touch": "^2.0.0-beta.4",
